# EleRelay-ESP32-2432S028

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  display.c  display.h  main.c
